# pefa

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  main.cpp
.github/workflows/: lint-clang-format.yml  main.yml  run-benchmarks.yml  run-tests.yml  slash-command-dispatch.yml
benchmarks/: CMakeLists.txt  benchmark_filter_kernel.cpp  benchmark_filter_kernel.inl  benchmarks.cpp
cmake/: install-deps.cmake  install-gtest.cmake  options.cmake
pefa/: api.h  expressions.cpp  expressions.h
pefa/api/: api.h  exceptions.cpp  exceptions.h  expressions.cpp  expressions.h
pefa/backends/: backend_traits.h
pefa/backends/lazy/: backend.cpp  backend.h  context.h  logical_plan.cpp  logical_plan.h  plan_optimizer.cpp  plan_optimizer.h
pefa/backends/naive/: backend.cpp  backend.h  context.h
pefa/backends/naive/kernels/: filter.cpp  filter.h
pefa/execution/: execution.cpp  execution.h  execution_context.cpp  execution_context.h
pefa/expressions/: expression_compiler.cpp  expression_compiler.h  expressions.cpp  expressions.h
pefa/jit/: jit.cpp  jit.h
pefa/kernels/: filter.cpp  filter.h
pefa/query_compiler/: expressions.cpp  expressions.h  logical_plan.cpp  logical_plan.h  plan_optimizer.cpp  plan_optimizer.h  query_compiler.cpp  query_compiler.h
pefa/query_compiler/lp_optimizer/: join_filter_pass.cpp  join_filter_pass.h  plan_optimizer.cpp  plan_optimizer.h
pefa/utils/: exceptions.cpp  llvm_helpers.h  utils.h
tests/: CMakeLists.txt  test_filter_kernel.cpp  test_not_segfaults.cpp  test_projection.cpp  utils.h
tests/execution_tests/: test_filter.cpp
tests/kernel_tests/: test_filter_kernel.cpp
tests/test_data/: chicago_taxi_trips_2016_01.csv  projection_test.csv
